# azovland-hotel

./: .env.dist  .gitignore  Makefile  README.md  gunicorn.conf.py  manage.py  pyproject.toml
.ansible/: ansible.cfg  inventory.yml.dist  requirements.yml
.ansible/group_vars/: production.yml.dist
.ansible/playbooks/: os.yml  ping.yml  server.yml  ssh.yml  user.yml
.ansible/roles/add_sudo_user/defaults/: main.yml
.ansible/roles/add_sudo_user/tasks/: main.yml
.docker/: .env.dist  Dockerfile  docker-compose.infra.dev.override.yml  docker-compose.infra.yml  docker-compose.monitoring.yml  docker-compose.yml  entrypoint.sh  nginx.conf  web.env.dist
.docker/db/: db.env
.docker/monitoring/: alertmanager.yml.dist  alerts.yml  prometheus.yml
.docker/nginx/: nginx.conf
.docker/web/: Dockerfile  web.env.dist
az/: urls.py  wsgi.py
az/settings/: base.py
az/static/theme/css/: custom.css  vendors.css
az/static/theme/fonts/: fonts.css
az/static/theme/js/: main.js  vendors.js
az/templates/: 404.html  500.html  base.html
az/templates/menus/: desktop_main_menu.html  mobile_main_menu.html
az/templatetags/: custom_tags.py
home/: blocks.py  models.py
home/migrations/: 0003_gallerypage.py  0004_alter_gallerypage_options_alter_gallerypage_body_and_more.py  0005_gallerypage_video_collection_and_more.py  0006_alter_gallerypage_video_collection.py  0007_alter_gallerypage_video_collection.py  0008_alter_gallerypage_video_collection.py  0009_alter_gallerypage_video_collection_roompage.py  0010_gallerypage_features_roompage_features.py  0011_alter_gallerypage_features_alter_roompage_features.py  0012_alter_gallerypage_body_alter_roompage_body.py  0013_alter_gallerypage_body_alter_roompage_body.py  0014_alter_gallerypage_video_collection_and_more.py  0015_alter_gallerypage_body_alter_roompage_body.py  0016_alter_gallerypage_body_alter_roompage_body.py  0017_alter_gallerypage_body_alter_roompage_body.py  0018_alter_gallerypage_body_alter_roompage_body.py  0019_alter_gallerypage_body_alter_roompage_body.py  0020_alter_gallerypage_body_alter_roompage_body.py  0021_alter_gallerypage_body_alter_gallerypage_features_and_more.py  0022_standardpage.py  0023_alter_standardpage_options.py  0024_genericsettings.py  0025_alter_genericsettings_options_and_more.py  0026_homepage_bg_video_size_l_homepage_bg_video_size_m_and_more.py  0027_alter_gallerypage_features_alter_roompage_features.py  0028_alter_gallerypage_features_alter_roompage_features.py  0029_homepage_activities_homepage_facilities_and_more.py  0030_homepage_featured_section_1_and_more.py  0031_homepage_featured_photos_homepage_reviews.py  0032_remove_homepage_featured_photos_and_more.py  0033_alter_homepage_header_1_alter_homepage_header_2.py  0034_alter_homepage_header_2.py  0035_alter_genericsettings_address.py  0036_genericsettings_book_link.py  0037_genericsettings_book_link_text.py  0038_homepage_featured_photos_3.py  0039_gallerylistpage.py  0040_roomlistpage_alter_gallerylistpage_options.py  0041_alter_gallerypage_video_collection_and_more.py  0042_gallerylistpage_header_and_more.py  (+6 more)
home/templates/blocks/: captioned_image_block.html  heading_block.html  images_block.html  paragraph_block.html
home/templates/home/: gallery_list_page.html  gallery_page.html  home_page.bak.html  home_page.html  home_page.html.bak  room_list_page.html  room_page.html  standard_list_page.html  standard_page.html
home/templatetags/: custom_tags.py
search/: views.py
